Fix scrollbar styling

--- a/app/assets/stylesheets/audio_player/audio_player.scss
+++ b/app/assets/stylesheets/audio_player/audio_player.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;  
   background: $logout-button-gray;
+  box-sizing: border-box;
   padding: 20px;
 
   .ap-track-detail {
