--- a/app/assets/stylesheets/home/home_index.scss
+++ b/app/assets/stylesheets/home/home_index.scss
@@ -3,13 +3,11 @@
 .home-container {
   display: flex;
   flex-direction: column;
-  // width: 90%;
   box-sizing: border-box;
-  // padding: 0 15em;
-  // height: 100%;
-  // background: yellow;
-  padding: 0 3em;
-  // margin-top: 90px; 
+  padding: 7em 3em 0 3em;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
 
   h1 {
     font-family: 'ProximaNova-Extrabld';
