--- a/app/assets/stylesheets/main_dash/main_dash.scss
+++ b/app/assets/stylesheets/main_dash/main_dash.scss
@@ -147,12 +147,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    // align-items: center;
     width: 100%;
-    height: 100%;
-    // height: 470px;
-    // margin: 90px 0 0 45px;
-    // padding: 30px;
-    overflow: scroll;
+    height: 87%;
+    overflow: hidden;
+    // background: green; 
   }
 }     
