--- a/app/assets/stylesheets/playlists/playlist_detail.scss
+++ b/app/assets/stylesheets/playlists/playlist_detail.scss
@@ -4,17 +4,15 @@
   display: flex;
   flex-direction: row;
   box-sizing: border-box;
-  padding: 0 3em;
-  height: 70vh;
-  // width: 90%;
-  // padding: 7em 3em 3em 3em;
-  // background: yellow;
+  padding-left: 2em;
+  margin-top: 5em;
+  height: 65vh;
 
   .header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    // background: orange;
+    width: 25%;
 
     .image {
       position: relative; 
@@ -137,14 +135,14 @@
   }
 
   .tracks {
-    margin-left: 2em; 
-    width: 100%;
+    // margin-left: 1em; 
+    width: 75%;
     height: 100%;
     overflow: scroll;
     // height: 50%;
-    // background: orange;
+    // background: yellowgreen;
     // height: 100vh;
-    // overflow: scroll;
+    // overflow: scroll;  
 
     ul {
       display: flex;
@@ -153,17 +151,18 @@
 
       li {
         display: flex;
-        margin: 0 0 5px 15px;
         flex-direction: row;
         align-items: flex-start;
+        margin: 0 0 5px 15px;
 
         .track-info {
           display: flex;
           flex-direction: row;
           align-items: flex-start;
           position: relative;
+          box-sizing: border-box;
           padding: 15px 20px;
-          width: 90%;
+          width: 95%;
 
           .track-note {
             width: 15px;
